# gnutls

./: .clang-format  .clcopying  .cvscopying  .cvsignore  .cvsusers  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .mailmap  .packit.yaml  .travis.yml  .triage-policies.yml  .x-sc_GPL_version  .x-sc_avoid_if_before_free  .x-sc_bindtextdomain  .x-sc_cast_of_alloca_return_value  .x-sc_error_message_uppercase  .x-sc_file_system  .x-sc_m4_quote_check  .x-sc_makefile_at_at_check  .x-sc_program_name  .x-sc_prohibit_HAVE_MBRTOWC  .x-sc_prohibit_S_IS_definition  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_strings_without_use  .x-sc_prohibit_test_minus_ao  .x-sc_space_tab  .x-sc_the_the  .x-sc_two_space_separator_in_usage  .x-sc_useless_cpp_parens  AUTHORS  CONTRIBUTING.md  ChangeLog  ChangeLog.1  GNUmakefile  INSTALL.md  LICENSE  (+30 more)
doc/: .cvsignore  .gitignore  ANNOUNCE  API  API-template.html  ASN1.readme.txt  HACKING  Makefile.am  OID-registry.txt  README.CODING_STYLE  README.CVS  README.GIT  README.autoconf  README.gaa  TODO  alert-printlist.c  announce.txt  announcement-template.txt  bibliography.texi  certtool-examples.texi  certtool-files.texi  certtool-see-also.texi  certtool.cfg  cha-auth.texi  cha-bib.texi  cha-cert-auth.texi  cha-cert-auth2.texi  cha-ciphersuites.texi  cha-config.texi  cha-copying.texi  cha-crypto.texi  cha-errors.texi  cha-features.texi  cha-functions.texi  cha-gtls-app.texi  cha-gtls-examples.texi  cha-internals.texi  cha-intro-tls.texi  cha-library.texi  cha-preface.texi  (+64 more)
doc/arch/: objects.dia
doc/credentials/: Makefile.am  gnutls-http-serv  psk-passwd.txt  x509-server-dsa.pem  x509-server-key-dsa.pem
doc/cyclo/: Makefile.am
doc/doxygen/: Doxyfile.in  Doxyfile.orig
doc/examples/: .cvsignore  Makefile.am  ex-alert.c  ex-cert-select-pkcs11.c  ex-cert-select.c  ex-client-anon.c  ex-client-authz.c  ex-client-dtls.c  ex-client-psk.c  ex-client-resume.c  ex-client-srp.c  ex-client-tlsia.c  ex-client-udp.c  ex-client-x509-3.1.c  ex-client-x509.c  ex-client-xssl1.c  ex-client-xssl2.c  ex-client1.c  ex-client2.c  ex-crq.c  ex-cxx.cpp  ex-ocsp-client.c  ex-ocsp-verify.c  ex-pkcs11-list.c  ex-pkcs12.c  ex-rfc2818.c  ex-serv-anon.c  ex-serv-authz.c  ex-serv-dtls.c  ex-serv-export.c  ex-serv-pgp.c  ex-serv-psk.c  ex-serv-srp.c  ex-serv-x509.c  ex-serv1.c  ex-session-info.c  ex-verify-ssh.c  ex-verify.c  ex-x509-info.c  examples.h  (+4 more)
doc/latex/: .gitignore  Makefile.am  cover-epub.tex  cover.tex  cover.tex.in  epub.tex  fdl.tex  gnutls.bib  gnutls.tex  macros-epub.tex  macros.tex
doc/manpages/: .cvsignore  Makefile.am  certtool.1  crywrap.8  gnutls-cli-debug.1  gnutls-cli.1  gnutls-serv.1  gnutls-srpcrypt.1  gnutls_alert_get.3  gnutls_alert_get_name.3  gnutls_alert_get_strname.3  gnutls_alert_send.3  gnutls_alert_send_appropriate.3  gnutls_anon_allocate_client_credentials.3  gnutls_anon_allocate_server_credentials.3  gnutls_anon_free_client_credentials.3  gnutls_anon_free_server_credentials.3  gnutls_anon_set_params_function.3  gnutls_bye.3  (+636 more)
includes/: Makefile.am
lib/: .cvsignore  Makefile.am  README  README.der  abstract_int.h  alert.c  algorithms.h  anon_cred.c  asn1_tab.c  atfork.c  atfork.h  atomic.h  audit.c  audit.h  audit_int.h  auth.c  auth.h  auth_anon.c  auth_anon.h  auth_cert.c  auth_cert.h  auth_dh_common.c  auth_dh_common.h  auth_dhe.c  auth_dhe_dss.c  auth_dhe_dss.h  auth_dhe_psk.c  auth_dhe_rsa.c  auth_psk.c  auth_psk.h  auth_psk_passwd.c  auth_psk_passwd.h  auth_rsa.c  auth_rsa.h  auth_rsa_export.c  auth_rsa_psk.c  auth_srp.c  auth_srp.h  auth_srp_passwd.c  auth_srp_passwd.h  (+390 more)
libdane/: Makefile.am  dane-params.c  dane.c  errors.c  libdane.map
libextra/: .cvsignore  .gitignore  Makefile.am  auth_srp.c  auth_srp.h  auth_srp_passwd.c  auth_srp_passwd.h  auth_srp_rsa.c  auth_srp_sb64.c  configure.ac  crypt.c  crypt.h  crypt_bcrypt.c  crypt_bcrypt.h  crypt_srpsha1.c  crypt_srpsha1.h  ext_inner_application.c  ext_inner_application.h  ext_srp.c  ext_srp.h  extra.h  fipsmd5.c  gnutls-extra.h  gnutls-extra.pc.in  gnutls-extra.sym  gnutls-openssl.h  gnutls_extra.c  gnutls_extra.h  gnutls_ia.c  gnutls_openpgp.c  gnutls_openpgp.h  gnutls_openssl.c  gnutls_srp.c  gnutls_srp.h  libgnutls-extra-config.in  libgnutls-extra.m4  libgnutls-extra.map  libgnutls-extra.vers  lzoconf.h  lzodefs.h  (+5 more)
nettle/: .cvsignore  Makefile.am  aes-decrypt-table.c  aes-decrypt.c  aes-encrypt-table.c  aes-encrypt.c  aes-internal.h  aes-set-decrypt-key.c  aes.c  aes.h  arcfour-meta.c  arcfour.c  arcfour.h  arctwo-meta.c  arctwo.c  arctwo.h  cbc.c  cbc.h  des-compat.c  des-compat.h  des.c  des.h  des3.c  desCode.h  descore.README  desinfo.h  hmac.c  hmac.h  knuth-lfib.h  macros.h  md2.c  md2.h  md5-compat.h  md5.c  md5.h  memxor.c  memxor.h  nettle-internal.c  nettle-internal.h  nettle-meta.h  (+4 more)
src/: .cvsignore  CertificateExample.c  CrlExample.c  Makefile.am  PkixTabExample.c  README  README.crypt  README.srpcrypt  README.srptool  args-bak-upd.sh  args-std.def  asn1c.c  benchmark-cipher.c  benchmark-common.c  benchmark-tls.c  benchmark.c  benchmark.h  ca.pem  cert.pem  certtool-args.c  certtool-args.c.bak  certtool-args.def  certtool-args.def.in  certtool-args.h  certtool-args.h.bak  certtool-cfg.c  certtool-cfg.h  certtool-common.c  certtool-common.h  certtool-extras.c  certtool-gaa.c  certtool-gaa.h  certtool-options.json  certtool.c  certtool.cfg  certtool.gaa  cfg.c  cfg.h  cli-args.c  cli-args.c.bak  (+163 more)
tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  aead-cipher-vec.c  alerts.c  alpn-server-prec.c  anonself.c  atfork.c  auto-verify.c  base64-raw.c  base64.c  buffer.c  ca.pem  cert-common.h  cert-key-exchange.c  cert-reencoding.sh  cert-repro-20170915.h  cert-status.c  cert.c  cert_verify_inv_utf8.c  certder.c  certificate_set_x509_crl.c  certtool-pkcs11.sh  certuniqueid.c  cfg-test.sh  chain  chainverify-unsorted.c  chainverify.c  cipher-alignment.c  cipher-listings.sh  cipher-neg-common.c  cipher-padding.c  cipher-test.c  ciphersuite-name.c  client-fastopen.c  client-secrets.h  client-sign-md5-rep.c  client.c  client_dsa_key.c  (+557 more)
(+3546 files in other folders)
